[gd_scene load_steps=5 format=3 uid="uid://cwgigoepxghta"]

[ext_resource type="Texture2D" uid="uid://da07abiitjr4s" path="res://Resources/!Contept.png" id="1_0o5wb"]
[ext_resource type="Script" path="res://Objects/Building_1.gd" id="1_ct351"]
[ext_resource type="PackedScene" uid="uid://dj8afb6qslwww" path="res://Objects/Building_Script.tscn" id="2_2r8tj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxwc1"]
size = Vector2(210.5, 59)

[node name="Building" type="Node2D"]
script = ExtResource("1_ct351")

[node name="Building_area" type="ColorRect" parent="." groups=["Building_area"]]
offset_left = -352.0
offset_top = -252.0
offset_right = 351.0
offset_bottom = 308.0
color = Color(0.964706, 0.819608, 0.615686, 0.160784)

[node name="Building_Script" parent="." instance=ExtResource("2_2r8tj")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-80, 180, 81, 180, 97, 175, 171, 173, 208, 187, 266, 171, 256, 99, 219, 30, 206, -123, 186, -137, 178, -177, 144, -233, 102, -256, 1, -232, -99, -250, -107, -256, -143, -234, -179, -179, -186, -135, -206, -125, -220, 35, -253, 97, -263, 169, -207, 184, -162, 168)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1.25, 203)
shape = SubResource("RectangleShape2D_jxwc1")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("1_0o5wb")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -192.0
offset_top = 44.0
offset_right = -126.0
offset_bottom = 108.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
